2004/09/11 15:23 (-0400) muppetman

	* README, NEWS, Glib.pm: stable release 1.060

	* Makefile.PL: remove the "unstable" warning.

2004/08/29 14:19 (-0400) muppetman

	* README, NEWS, Glib.pm: unstable development release 1.055

2004/08/27 17:44 (-0400) rwmcfa1

	* GenPod.pm: kaffee was seeing include failures which resulted in the 
	carp message comming out, but it was using $_ where it should of been
	$pod which caused a second level of errors which were fatal. 

2004/08/27 13:42 (-0400) rwmcfa1

	* GenPod.pm: preprocess_pod wasn't being called on each pod section
	as it used to be and still should be. couldn't get to sfcvs webui to
	find out when it quit being, but it's been a while.

2004/08/15 17:33 (-0400) muppetman

	* README, NEWS, Glib.pm: unstable development release 1.054

2004/08/13 22:14 (-0400) muppetman

	* GenPod.pm: fix typo in doc

2004/08/06 21:10 (-0400) rwmcfa1

	* GenPod.pm: get the types from signals prototypes and properties so 
	their enum values will be listed at the bottom of the pod. (this is in
	addition to the xsubs and explicit stuff already in place)

2004/08/01 21:10 (-0400) muppetman

	* README, NEWS, Glib.pm: unstable development release 1.053

2004/08/01 17:58 (+0200) kaffeetisch

	* MakeHelper.pm: Move select_files_by_version and
	read_source_list_file from Gtk2's Makefile.PL here so that other
	modules can use them too.  Also add Ross' cool "evenification"
	hack to select_files_by_version.

	* gperl.h, typemap: Add a char_own typemap.

2004/07/18 21:00 (-0400) muppetman

	* README, NEWS, Glib.pm: unstable development release 1.052

2004/07/18 21:00 (-0400) muppetman

	* GObject.xs: one last bug; always prefer to create the key with an
	underscore in its name.  this preserves the semantics of the old
	property stuff from Glib::Object::Subclass::SET_PROPERTY(), although
	it means we'll always try twice on keys with no dashes.

	* Subclass.pm: remove the CHECK block (and the associated bugs) by